<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    card_view:cardCornerRadius="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:padding="6dp">

        <ImageView
            android:id="@+id/img_item_photo"
            android:layout_width="150dp"
            android:layout_height="215dp"
            android:scaleType="centerCrop"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_toEndOf="@id/img_item_photo"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:text="@string/heroes_name" />

        <TextView
            android:id="@+id/tv_item_author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_toEndOf="@id/img_item_photo"
            android:layout_below="@id/tv_item_detail"
            android:ellipsize="end"
            android:textStyle="bold"
            android:text="Author :"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/tv_item_genre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_toEndOf="@id/img_item_photo"
            android:layout_below="@id/tv_item_author"
            android:ellipsize="end"
            android:textStyle="bold"
            android:text="Genre :"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/tv_item_year"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_toEndOf="@id/img_item_photo"
            android:layout_below="@id/tv_item_genre"
            android:ellipsize="end"
            android:textStyle="bold"
            android:text="Year :"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/tv_item_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_toEndOf="@id/img_item_photo"
            android:layout_below="@id/tv_item_name"
            android:ellipsize="end"
            android:maxLines="3"
            tools:text="@string/detail" />

        <LinearLayout
            android:id="@+id/layout_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="16dp"
            android:layout_toEndOf="@id/img_item_photo"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_set_favorite"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/favorite"
                android:textSize="12sp"
                android:drawableStart="@drawable/ic_love"
                android:paddingStart="7dp"
                android:paddingEnd="8dp"
                />

            <Button
                android:id="@+id/btn_read"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/read"
                android:textSize="12sp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp" />

            <Button
                android:id="@+id/btn_set_share"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/share"
                android:textSize="12sp"
                android:drawableStart="@drawable/ic_share"
                android:paddingStart="8dp"
                android:paddingEnd="8dp" />

        </LinearLayout>
    </RelativeLayout>
</androidx.cardview.widget.CardView>
